--- a/src/components/HomePage/HomePage.scss
+++ b/src/components/HomePage/HomePage.scss
@@ -6,7 +6,11 @@
   &__wrap {
     display: flex;
     flex-direction: column;
-    width: 40%;
+    width: 45%;
+
+    @media screen and (max-width: 768px) {
+      width: 75%;
+    }
   }
 
   &__button {
