--- a/src/components/List/List.scss
+++ b/src/components/List/List.scss
@@ -4,4 +4,25 @@
   input[type="checkbox"] {
     cursor: pointer;
   }
+
+  &__item {
+    display: flex;
+    justify-content: space-between;
+    padding: 10px 16px;
+  }
+
+  &__label {
+    display: flex;
+    overflow: auto;
+    padding-left: 5px;
+  }
+
+  &__input {
+    flex-shrink: 0;
+  }
+
+  &__icons {
+    display: flex;
+    font-size: 18px;
+  }
 }
