handle validating and adding of a new task

--- a/src/components/AddNewTask/AddNewTask.scss
+++ b/src/components/AddNewTask/AddNewTask.scss
@@ -6,6 +6,10 @@
     margin: 0 auto;
   }
 
+  &__link {
+    align-self: end;
+  }
+
   &__submit {
     align-self: end;
     padding: 6px 35px 6px 28px;
