--- a/src/components/List/List.scss
+++ b/src/components/List/List.scss
@@ -8,17 +8,20 @@
   &__item {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     padding: 10px 16px;
   }
 
   &__label {
     display: flex;
+    align-items: center;
     overflow: auto;
     padding-left: 5px;
   }
 
   &__input {
     flex-shrink: 0;
+    margin: 0;
   }
 
   &__icons {
