--- a/src/components/List/List.scss
+++ b/src/components/List/List.scss
@@ -1,7 +1,7 @@
 .list {
-  &__item,
   label,
-  input[type="checkbox"] {
+  input[type="checkbox"],
+  &__icon {
     cursor: pointer;
   }
 
@@ -15,6 +15,7 @@
   &__label {
     display: flex;
     align-items: center;
+    flex-grow: 1;
     overflow: auto;
     padding-left: 5px;
   }
