add header for the list of tasks for selecting and deleting all tasks

--- a/src/components/List/List.scss
+++ b/src/components/List/List.scss
@@ -10,6 +10,10 @@
     justify-content: space-between;
     align-items: center;
     padding: 10px 16px;
+
+    &-color {
+      background-color: rgba(0, 123, 255, 0.1);
+    }
   }
 
   &__label {
