--- a/src/components/Message/Message.scss
+++ b/src/components/Message/Message.scss
@@ -1,4 +1,5 @@
 .message {
+  width: 190px;
   position: fixed;
   top: 50px;
   right: 10px;
@@ -7,11 +8,11 @@
   border-radius: 6px;
 
   @media screen and (max-width: 768px) {
+    width: 255px;
     top: 41px;
     padding: 8px;
-    right: 0;
-    left: 0;
-    border-radius: 0;
+    left: 50%;
+    transform: translateX(-50%);
   }
 
   &--error {
