--- a/src/components/Message/Message.scss
+++ b/src/components/Message/Message.scss
@@ -4,7 +4,7 @@
   top: 50px;
   right: 10px;
   padding: 16px;
-  background-color: rgba(green, .65);
+  background-color: rgba(green, 0.65);
   border-radius: 6px;
 
   @media screen and (max-width: 768px) {
@@ -16,7 +16,7 @@
   }
 
   &--error {
-    background-color: rgba(red, .65);
+    background-color: rgba(red, 0.65);
   }
 
   &__text {
